@@ -36,72 +36,69 @@ import jdk.test.lib.process.OutputAnalyzer;
 import jdk.test.lib.Platform;
 import jdk.internal.misc.Unsafe;
 
-import java.lang.Runtime;
-
 public class CreateCoredumpOnCrash {
-  private static class Crasher {
-    public static void main(String[] args) {
-      Unsafe.getUnsafe().putInt(0L, 0);
+    private static class Crasher {
+        public static void main(String[] args) {
+            Unsafe.getUnsafe().putInt(0L, 0);
+        }
     }
-  }
 
-  private static String ulimitString(int limit) {
-    String string = "ulimit -c ";
-    if (limit != Integer.MAX_VALUE) {
-      string += limit;
-    } else {
-      string += "unlimited";
+    private static String ulimitString(int limit) {
+        String string = "ulimit -c ";
+        if (limit != Integer.MAX_VALUE) {
+            string += limit;
+        } else {
+            string += "unlimited";
+        }
+        return string+";";
     }
-    return string+";";
-  }
 
-  public static void main(String[] args) throws Exception {
-    runTest("-XX:-CreateCoredumpOnCrash").shouldContain("CreateCoredumpOnCrash turned off, no core file dumped")
-    .shouldNotHaveExitValue(0);
+    public static void main(String[] args) throws Exception {
+        runTest("-XX:-CreateCoredumpOnCrash").shouldContain("CreateCoredumpOnCrash turned off, no core file dumped")
+        .shouldNotHaveExitValue(0);
 
-    if (Platform.isWindows()) {
-      // The old CreateMinidumpOnCrash option should still work
-      runTest("-XX:-CreateMinidumpOnCrash").shouldContain("CreateCoredumpOnCrash turned off, no core file dumped")
-      .shouldNotHaveExitValue(0);
-    } else {
-      OutputAnalyzer oa = new OutputAnalyzer(Runtime.getRuntime().exec("ulimit -c"));
-      oa.shouldHaveExitValue(0);
-      if (!oa.contains("0\n")) {
-        oa = runTest("-XX:+CreateCoredumpOnCrash");
-        oa.shouldContain("Core dump will be written.");
-        oa.shouldNotHaveExitValue(0);
+        if (Platform.isWindows()) {
+            // The old CreateMinidumpOnCrash option should still work
+            runTest("-XX:-CreateMinidumpOnCrash").shouldContain("CreateCoredumpOnCrash turned off, no core file dumped")
+            .shouldNotHaveExitValue(0);
+        } else {
+            OutputAnalyzer oa = new OutputAnalyzer(Runtime.getRuntime().exec("ulimit -c"));
+            oa.shouldHaveExitValue(0);
+            if (!oa.contains("0\n")) {
+                oa = runTest("-XX:+CreateCoredumpOnCrash");
+                oa.shouldContain("Core dump will be written.");
+                oa.shouldNotHaveExitValue(0);
 
-        oa = runTest("-XX:+CreateCoredumpOnCrash", ulimitString(1024));
-        oa.shouldContain("warning: CreateCoredumpOnCrash specified, but");
-        oa.shouldContain("To ensure a full core dump");
-        oa.shouldNotHaveExitValue(0);
+                oa = runTest("-XX:+CreateCoredumpOnCrash", ulimitString(1024));
+                oa.shouldContain("warning: CreateCoredumpOnCrash specified, but");
+                oa.shouldContain("To ensure a full core dump");
+                oa.shouldNotHaveExitValue(0);
 
-        // Do "ulimit -c 0" last, as once we decrease it, we cannot increase it
-        oa = runTest("-XX:+CreateCoredumpOnCrash", ulimitString(0));
-        oa.shouldContain("warning: CreateCoredumpOnCrash specified, but");
-        oa.shouldContain("To enable core dumping");
-        oa.shouldNotHaveExitValue(0);
-      } else {
-        throw new Exception("ulimit is not set correctly, try 'ulimit -c unlimited' and re-run.");
-      }
+                oa = runTest("-XX:+CreateCoredumpOnCrash", ulimitString(0));
+                oa.shouldContain("warning: CreateCoredumpOnCrash specified, but");
+                oa.shouldContain("To enable core dumping");
+                oa.shouldNotHaveExitValue(0);
+            } else {
+                throw new Exception("ulimit is not set correctly, try 'ulimit -c unlimited' and re-run.");
+            }
+        }
     }
-  }
 
-  public static OutputAnalyzer runTest(String option) throws Exception {
-    ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder("-Xmx128m",
-                                                                         "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
-                                                                         option, Crasher.class.getName());
-    return new OutputAnalyzer(pb.start());
-  }
-  public static OutputAnalyzer runTest(String option, String limit) throws Exception {
-    ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder("-Xmx128m",
-                                                                         "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
-                                                                         option, new String("'"+Crasher.class.getName()+"'"));
-    String args = "";
-    for (String s:pb.command()) {
-      args += s+" ";
+    public static OutputAnalyzer runTest(String option) throws Exception {
+        ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder("-Xmx128m",
+                                                                             "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
+                                                                             option, Crasher.class.getName());
+        return new OutputAnalyzer(pb.start());
     }
-    String exec_cmd[] = {"/bin/sh", "-c", limit+args};
-    return new OutputAnalyzer(Runtime.getRuntime().exec(exec_cmd));
-  }
+    public static OutputAnalyzer runTest(String option, String limit) throws Exception {
+        ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder("-Xmx128m",
+                                                                             "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
+                                                                             option, new String("'"+Crasher.class.getName()+"'"));
+        String args = "";
+        for (String s:pb.command()) {
+            args += s+" ";
+        }
+        String exec_cmd[] = {"/bin/sh", "-c", limit+args};
+        return new OutputAnalyzer(Runtime.getRuntime().exec(exec_cmd));
+    }
 }
